# Remote_Administrative_Console

./: .gitattributes  CMakeLists.txt  README.md  config.ini  resources.qrc  server.pro
include/: client.h  clientlistwrapper.h  configurationManager.h  connectionManager.h  json.h
php_script/: index.php
postman_files/: TestCases..json  TestCases.json
resource/qml/: Clients_header.qml  Dialog1.qml  Dialog2.qml  Filemanager.qml  Main.qml  ShellWindow.qml  showPrompt.qml
src/: client.cpp  clientlistwrapper.cpp  configurationManager.cpp  connectionManager.cpp  json.cpp  main.cpp
